--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost/db_blogpessoal?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
 spring.datasource.username=root
-spring.datasource.password=vouserdev
+spring.datasource.password=domenica4025
+
 
 spring.jpa.show-sql=true
 
